Finish readMe